<resources>
    <string name="app_name">AndroiDB</string>

    <string name="title_activity_database">DatabaseActivity</string>
    <string name="title_activity_table">TableActivity</string>
    <string name="title_activity_add_database">NewServerActivity</string>
    <string name="title_activity_databases">ServerActivity</string>
    <string name="title_activity_query_runner">QueryRunnerActivity</string>
    <string name="title_activity_row_inspector">RowInspectorActivity</string>
    <string name="title_activity_edit_table">EditTableActivity</string>

    <string name="activity_servers_no_servers">You have no SQL servers saved, use the overflow menu to add a new server.</string>

    <string name="action_sort">Sort</string>
    <string name="action_show">Show</string>
    <string name="action_query_runner">Query Runner</string>

    <string name="action_show_tables">Show Tables</string>
    <string name="action_show_indexes">Show Indexes</string>
    <string name="action_show_views">Show Views</string>
    <string name="action_show_sequences">Show Sequences</string>

    <string name="action_sort_schema">Sort by Schema</string>
    <string name="action_sort_name">Sort by Name</string>
    <string name="action_sort_type">Sort by Type</string>

    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_test">Test</string>
    <string name="action_new">New</string>
    <string name="action_done">Done</string>
    <string name="action_delete">Delete</string>
    <string name="action_clone">Clone</string>
    <string name="action_drop_database">Drop Database</string>
    <string name="action_drop_table">Drop Table</string>

    <string name="dialog_title_drop_table">Drop Table</string>
    <string name="dialog_desc_drop_table">Enter "DROP TABLE" below to continue</string>
    <string name="dialog_edit_text_hint_drop_table">DROP TABLE</string>

    <string name="columns_title">Columns</string>
    <string name="fkeys_title">Foreign Keys</string>
    <string name="pkeys_title">Primary Keys</string>


    <string name="no_databases_message">Use the overflow menu to add a database</string>

    <string name="query_field_hint">query&#8230;</string>
    <string name="query_runner_run">execute</string>
    <string name="query_runner_result_title">Query Status</string>

    <string name="prompt_name">Name</string>
    <string name="prompt_host">Hostname</string>
    <string name="prompt_port">Port (5432)</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_default_db">Default (postgres)</string>

    <string name="server_info_label">Server</string>
    <string name="user_info_label">User Info</string>

    <string name="database_title_name">Name</string>
    <string name="database_title_owner">Owner</string>
    <string name="database_title_comment">Comment</string>
    <string name="database_title_tablespace">Tablespace</string>
    <string name="database_title_template">Template</string>

    <string name="server_name">Name</string>
    <string name="server_host">Host</string>
    <string name="server_port">Port</string>
    <string name="server_default_db">Default</string>
    <string name="server_username">Username</string>
    <string name="server_password">Password</string>

    <string name="hint_name">Database Name</string>
    <string name="hint_owner">Database Owner</string>
    <string name="hint_comment">Database Comment</string>
    <string name="hint_tablespace">Database Tablespace</string>
    <string name="hint_template">Database Template</string>

    <string name="loading_databases">Loading databases&#8230;</string>

    <string name="data_view_next">next</string>
    <string name="data_view_previous">previous</string>
</resources>
