<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/new_server_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <GridLayout
                android:id="@+id/colors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </HorizontalScrollView>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/grey_400"
            android:fontFamily="sans-serif-medium"
            android:text="@string/server_info_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:weightSum="1">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textAllCaps="true"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:textColor="@color/grey_400"
                android:text="name"/>
            <EditText android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_weight="1"
                android:hint="@string/prompt_name"
                android:layout_marginBottom="@dimen/title_padding"
                android:inputType="text"
                android:singleLine="true"
                android:background="@drawable/edit_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textAllCaps="true"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:text="host"/>
            <EditText android:id="@+id/host"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/prompt_host"
                android:layout_marginBottom="@dimen/title_padding"
                android:inputType="text"
                android:singleLine="true"
                android:background="@drawable/edit_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textAllCaps="true"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:text="port"/>
            <EditText android:id="@+id/port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/title_padding"
                android:paddingTop="@dimen/title_padding"
                android:paddingBottom="@dimen/title_padding"
                android:hint="@string/prompt_port"
                android:inputType="number"
                android:singleLine="true"
                android:layout_weight="3"
                android:background="@drawable/edit_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textAllCaps="true"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:text="default"/>
            <EditText android:id="@+id/default_db"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:hint="@string/prompt_default_db"
                android:layout_marginBottom="@dimen/title_padding"
                android:paddingTop="@dimen/title_padding"
                android:paddingBottom="@dimen/title_padding"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/edit_text"/>
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/grey_400"
            android:fontFamily="sans-serif-medium"
            android:text="@string/user_info_label"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textAllCaps="true"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:text="username"/>
            <EditText android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_weight="1"
                android:hint="@string/prompt_username"
                android:layout_marginBottom="@dimen/title_padding"
                android:paddingTop="@dimen/title_padding"
                android:paddingBottom="@dimen/title_padding"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:inputType="text"
                android:singleLine="true"
                android:background="@drawable/edit_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textAllCaps="true"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:text="password"/>
            <EditText android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_weight="1"
                android:hint="@string/prompt_password"
                android:layout_marginBottom="@dimen/title_padding"
                android:paddingTop="@dimen/title_padding"
                android:paddingBottom="@dimen/title_padding"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/edit_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="?android:buttonBarStyle">
            <Button
                android:id="@+id/save"
                android:text="save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="?android:buttonBarButtonStyle"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/test"
                android:text="test"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="?android:buttonBarButtonStyle"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>